--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,11 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
 )
 
+generate_messages(DEPENDENCIES std_msgs)
+
 catkin_package(CATKIN_DEPENDS rospy std_msgs)
 
 catkin_install_python(PROGRAMS
   scripts/mani_subscriber.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/scripts)
+  scripts/mani_publisher.py
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts)
