--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.0.2)
 project(mani_test)
 
 
-find_package(catkin REQUIRED COMPONENTS
-  rospy
-  std_msgs
-)
+find_package(catkin REQUIRED COMPONENTS message_generation std_msgs rospy)
+
+add_message_files(DIRECTORY msg FILES Mdata.msg)
 
 generate_messages(DEPENDENCIES std_msgs)
 
